# L1-node-template

./: .gitignore  Cargo.toml  README.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/common/: Cargo.toml
pallets/common/src/: lib.rs
pallets/minichain/: Cargo.toml  build.rs
pallets/minichain/src/: l0.rs  lib.rs  trait_defaults.rs  weights.rs
pallets/pos/: Cargo.toml
pallets/pos/src/: lib.rs  weights.rs
pallets/template/: Cargo.toml
pallets/upward-messages/: Cargo.toml
pallets/upward-messages/src/: lib.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
